--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Type assertions based on @sindresorhus/is.",
   "license": "WTFPL",
   "author": "darkobits",
-  "main": "dist/index.js",
+  "main": "dist/assert-is.js",
   "files": [
     "dist"
   ],
@@ -17,11 +17,19 @@
     "lint": "xo",
     "test": "jest",
     "prebuild": "rimraf dist",
-    "build": "babel src --out-dir=dist --source-maps=true --no-comments --ignore=spec",
+    "build": "babel src --out-dir=dist --source-maps",
+    "prepack": "pr:pre",
+    "postpack": "pr:post",
     "prebump": "run-p lint test build",
-    "bump": "standard-version"
+    "bump": "standard-version",
+    "bump:beta": "npm run bump -- --prerelease=beta"
+  },
+  "dependencies": {
+    "@sindresorhus/is": "^0.7.0",
+    "ramda": "^0.25.0"
   },
   "devDependencies": {
+    "@darkobits/publish-root": "^1.0.0",
     "babel-cli": "^6.26.0",
     "babel-jest": "^22.4.1",
     "babel-plugin-module-resolver": "^2.7.1",
@@ -44,9 +52,5 @@
     "rules": {
       "no-multiple-empty-lines": "off"
     }
-  },
-  "dependencies": {
-    "@sindresorhus/is": "^0.7.0",
-    "ramda": "^0.25.0"
   }
 }
