--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@darkobits/assert-is",
-  "version": "1.0.1",
+  "version": "1.1.0-beta.0",
   "description": "Type assertions based on @sindresorhus/is.",
   "license": "WTFPL",
   "author": "darkobits",
