--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Type assertions based on @sindresorhus/is.",
   "license": "WTFPL",
   "author": "darkobits",
-  "main": "dist/assert-is.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/darkobits/assert-is.git"
+  },
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
